--- a/Ang-Batch-Data-Correction.csproj
+++ b/Ang-Batch-Data-Correction.csproj
@@ -29,6 +29,9 @@
     <Folder Include="ClientApp\src\app\shared\_services\" />
     <Folder Include="ClientApp\src\app\login\" />
     <Folder Include="ClientApp\src\app\account\" />
+    <Folder Include="Service\" />
+    <Folder Include="Models\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
